--- a/web.html
+++ b/web.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Lantrn desing</title>
+    <title>Bootstrap 5 example 1</title>
+    <a href="http://\"></a>
 </head>
 <body>
-    <header>
-        <img src="images/rl_logo.png" alt="">
-        <ul>
-        <li>HOME</li>
-        <li>Serivcs</li>
-        <li>Portfolio</li>
-        <li>Contacat</li>
-    </ul>
-    </header>
-    <article>
-    </section>
-    <img src="images/tokyo.jpg" alt="Tokyo buliding">
-    <section></section>
-    <section></section>
-    <section></section>
     
 </body>
 </html>
